--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ img{
     width: 100%;
     padding: 4.8rem 0;
     background-color: whitesmoke;
+    position: relative;
 }
 .work .title {
     text-align: center;
@@ -262,11 +263,63 @@ img{
     top: 45%;
     font-size: 1.5rem;
     color: #fff;
+   
 }
 .work__img:hover .add__hover{
     opacity: 1;
 }
+
+
+.add__work{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;left: 0;
+    background-color: rgba(0, 0,  0,  0.9);
+    z-index: 154;
+    display: none;
+}
+.add__work__item{
+    width: 40%;
+    margin: 0 auto;
+    margin-top: 4rem;
+    background-color: #fff;
+    position: relative;
+
+}
+
+.add__work__item .work__imgg img{
+    width: 100%;
+    height: 400px;
+    margin: 0 auto;
+}
+.add__work__item .title p{
+    text-align: center;
+    padding: 25px;
+    font-family: var(--karlo);
+    color: #181617;
+}
+.add__work__item .title span{
+    position: absolute;
+    left: 30px;
+    color: #181617;
+    font-family: var(--monster);
+}
+.work__footer{
+    display: flex;
+    justify-content: space-around;
+    background-color: #2B2B2B;
+    padding: 1rem 0;
+}
+.work__footer a{
+    color: #fff;
+}
+
 /* earth */
+
+
+
+
 
 .earth{
     width: 100%;
@@ -423,6 +476,8 @@ img{
 .footer p a{
     color: #A8A8A8;
 }
+
+
 
 .show{
     display: block;
