--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,7 +16,7 @@
     right: 2%;
     top: 10%;
     border-radius: 10px;
-    z-index: 1;
+    z-index: 1111;
 
 }
 .add__navbar{
@@ -171,6 +171,11 @@ display: none;
     line-height: 1.6;
     letter-spacing: 2px;
 }
+
+.swiper {
+    width: 100%;
+    height: 100vh;
+  }
 .contact .title{
     display: grid;
     grid-template-columns: 100%;
